tests/baselines/reference/CommentsOnObjectLiteral2.errors.txt
==== tests/cases/compiler/commentsOnObjectLiteral2.ts (1 errors) ====
    var Person = makeClass( 
                 ~~~~~~~~~
!!! commentsOnObjectLiteral2.ts(1,14): error TS2095: Could not find symbol 'makeClass'.
       { 
           /** 
            This is just another way to define a constructor. 
            @constructs 
            @param {string} name The name of the person. 
            */ 
           initialize: function(name) { 
               this.name = name; 
           }, 
       } 
    );